<resources>

  <string name="app_name">Codebreaker</string>
  <string name="submit">Submit</string>
  <string name="guess_hint">Guess</string>
  <string name="new_game">New game</string>
  <string name="new_game_condensed">New</string>
  <string name="results_of_guess">Results of guess</string>
  <string name="restart_game">Restart game</string>
  <string name="restart_game_condensed">Restart</string>
  <string name="title_settings">Settings</string>
  <string name="settings">Settings</string>
  <string name="code_length_pref_key">code_length_pref</string>
  <string name="code_length_pref_title">Code length</string>
  <string name="code_length_pref_summary"><![CDATA[Length of secret code & required length of all guesses.]]></string>

  <string name="color_codes">ROYGBIV</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="login_failure_message">Unable to sign in with the provided credentials</string>
  <string name="sign_out">Sign out</string>
  <string name="code_length">Code Length</string>
  <string name="average_of_guesses">Average # of Guesses</string>

  <string name="average_guesses_format">%4.2f</string>

  <string name="title_activity_navigation">NavigationActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="menu_home">Home</string>

  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="title_summary">Summary</string>
  <string name="title_current_game">Current game</string>
  <string name="title_current_matches">Current matches</string>
  <string name="title_available_matches">Available matches</string>
  <string name="title_closed_matches">Closed matches</string>
  <string-array name="color_labels">
    <item>Red</item>
    <item>Orange</item>
    <item>Yellow</item>
    <item>Green</item>
    <item>Blue</item>
    <item>Indigo</item>
    <item>Violet</item>
  </string-array>
</resources>