<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:showIn="navigation_view">

  <group
    android:id="@+id/primary_group"
    android:checkableBehavior="single">

    <item
      android:id="@+id/navigation_game"
      android:title="@string/title_current_game"/>

    <item
      android:id="@+id/navigation_current_matches"
      android:title="@string/title_current_matches"/>

    <item
      android:id="@+id/navigation_available_matches"
      android:title="@string/title_available_matches"/>

    <item
      android:id="@+id/navigation_closed_matches"
      android:title="@string/title_closed_matches"/>

    <item
      android:id="@+id/navigation_summary"
      android:title="@string/title_summary"
      android:icon="@drawable/ic_summary"/>

  </group>

  <group
    android:id="@+id/secondary_group"
    android:checkableBehavior="none">

    <item
      android:id="@+id/navigation_settings"
      android:title="@string/title_settings"/>

  </group>

</menu>