<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@id/navigation_game">

  <fragment
    android:id="@+id/navigation_game"
    android:label="@string/app_name"
    android:name="edu.cnm.deepdive.codebreaker.controller.GameFragment"
    tools:layout="@layout/fragment_game"/>

  <fragment
    android:id="@+id/navigation_settings"
    android:label="@string/title_settings"
    android:name="edu.cnm.deepdive.codebreaker.controller.SettingsFragment"/>

  <fragment
    android:id="@+id/navigation_summary"
    android:label="@string/title_summary"
    android:name="edu.cnm.deepdive.codebreaker.controller.SummaryFragment"
    tools:layout="@layout/fragment_summary"/>

  <fragment
    android:id="@+id/navigation_current_matches"
    android:label="@string/title_current_matches"
    android:name="edu.cnm.deepdive.codebreaker.controller.MatchFragment"
    tools:layout="@layout/fragment_match">

    <argument
      android:name="variation"
      app:argType="edu.cnm.deepdive.codebreaker.controller.MatchFragment$Variation"
      android:defaultValue="CURRENT"/>

  </fragment>

  <fragment
    android:id="@+id/navigation_available_matches"
    android:label="@string/title_available_matches"
    android:name="edu.cnm.deepdive.codebreaker.controller.MatchFragment"
    tools:layout="@layout/fragment_match">

    <argument
      android:name="variation"
      app:argType="edu.cnm.deepdive.codebreaker.controller.MatchFragment$Variation"
      android:defaultValue="AVAILABLE"/>

  </fragment>

  <fragment
    android:id="@+id/navigation_closed_matches"
    android:label="@string/title_closed_matches"
    android:name="edu.cnm.deepdive.codebreaker.controller.MatchFragment"
    tools:layout="@layout/fragment_match">

    <argument
      android:name="variation"
      app:argType="edu.cnm.deepdive.codebreaker.controller.MatchFragment$Variation"
      android:defaultValue="CLOSED"/>

  </fragment>

</navigation>